# tech-article-generator

./: .gitignore  README.md  pyproject.toml
knowledge/: engineering_doc.md
src/tech_article_generator/: crew.py  main.py
src/tech_article_generator/config/: agents.yaml  tasks.yaml
src/tech_article_generator/llm/: llm_config.py
src/tech_article_generator/tools/: topic_tools.py
