[project]
name = "tech_article_generator"
version = "0.1.0"
description = "tech-article-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "langchain>=0.3.26",
    "litellm>=1.72.6",
    "openai>=1.93.1",
]

[project.scripts]
tech_article_generator = "tech_article_generator.main:run"
run_crew = "tech_article_generator.main:run"
train = "tech_article_generator.main:train"
replay = "tech_article_generator.main:replay"
test = "tech_article_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
